# stagewise-coding-agent-fragility

./: .gitignore  LICENSE  README.md  generate_configs.py  pyproject.toml
configs/: cross_model_runs.yaml  experiment_default.yaml  humanevalplus.yaml  models.yaml  models_ds_chat_balanced.yaml  models_ds_chat_chaotic.yaml  models_ds_chat_conservative.yaml  models_ds_chat_creative.yaml  models_ds_chat_deterministic.yaml  models_ds_reason_default.yaml  models_qwen3_coder_ollama.yaml  models_qwen_plus_balanced.yaml  models_qwen_plus_chaotic.yaml  models_qwen_plus_conservative.yaml  models_qwen_plus_creative.yaml  models_qwen_plus_deterministic.yaml  models_qwen_turbo_balanced.yaml  models_qwen_turbo_chaotic.yaml  models_qwen_turbo_conservative.yaml  models_qwen_turbo_creative.yaml  models_qwen_turbo_deterministic.yaml  swebench.yaml  swebench_verified.yaml
docs/: implementation_blueprint.md  implementation_plan_detailed.md  multi_model_report_en.md  multi_model_report_zh.md  related_work_expanded.md  report_en.md  research_insights.md  workflow_and_benchmark_selection.md
scripts/: gen_results.sh
src/stagewise_coding_agent_fragility/: README.md  __init__.py
src/stagewise_coding_agent_fragility/agent/: __init__.py  failure_summary.py  loop.py  repairer.py  solver.py
src/stagewise_coding_agent_fragility/analysis/: __init__.py  figures.py  (+3 more)
tests/: test_agent.py  test_benchmarks.py  test_cli.py  test_config_loader.py  test_execution_layer.py  test_experiments.py  test_integration_deepseek.py  test_log_schema.py  test_model_client.py  test_models.py  test_prompting.py
(+35 files in other folders)
